--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Material Resume</title>
+    <title>Murat CV</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap" media="print" onload="this.media='all'"/>
@@ -64,15 +65,15 @@
             <div class="header-bio mt-3">
               <div data-aos="zoom-in" data-aos-delay="0">
                 <h2 class="h1">Мурат Фазлиев</h2>
-                <p>Разработчик мобильных приложений</p>
+                <p>Разработчик приложений</p>
               </div>
               <div class="header-social mb-3 d-print-none" data-aos="zoom-in" data-aos-delay="200">
                 <nav role="navigation">
                   <ul class="nav justify-content-center">
                    
-                    <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/templateflip" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a>
+                    <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/profile.php?id=100006405912397" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/templateflip" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a>
+                    <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/muratfazliev/" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="https://github.com/templateflip" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a>
                     </li>
@@ -91,7 +92,7 @@
       <div class="row">
         <div class="col-md-6">
           <h2 class="h2 fw-light mb-4">Обо мне</h2>
-          <p>Я Фазлиев Мурат изучаю и занимаюсь разработкой мобильных приложений в особенности  <strong>Android</strong> приложений. Также разрабатываю десктопные приложени и сайты.</p>
+          <p>Я <strong>Фазлиев Мурат</strong> изучаю и занимаюсь разработкой приложений, в особенности  <strong>Android</strong> приложений. Также разрабатываю десктопные приложени и сайты.</p>
           <p>Быстро обучаюсь и могу разработать ваш проект на новых технологиях.</p>
         </div>
         <div class="col-md-5 offset-lg-1">
