--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ Association of Kyrgyzstan
 </span></div>
           </div>
           <div class="timeline-body px-4 pb-4">
-            <div class="text-muted text-small mb-3">September, 2021 - Present</div>
+            <div class="text-muted text-small mb-3">September, 2021 - March, 2022</div>
            
           </div>
         </div>
